-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.5
-
Windows 7
-
c9e96db7879d793d5ea12b6a0a2d6bce74c3e537
Steps to reproduce:
1) Run the code below
2) Switch to Japanese IME (Hiragana)
3) Type "aaaa" (See trans-input.png)
4) Type space key (See trans-henkan.png) - converting text is painted out with black unexpectedly
It seems both background and foreground colour is set with black.
Expected result is shown in the attached no-trans-henkan.png.
#include <QtGui> class Foo : public QWidget { public: Foo() : QWidget(0) { QVBoxLayout *lay = new QVBoxLayout(this); QTextEdit *textEdit = new QTextEdit; textEdit->setStyleSheet("background:transparent"); lay->addWidget(textEdit); } }; int main(int argc, char *argv[]) { QApplication app(argc, argv); Foo foo; foo.show(); return app.exec(); }
- relates to
-
QTBUG-42344 Pre-Edit string shows buggy behaviour when used with Japanese (Hiragana)
-
- Closed
-
For Gerrit Dashboard: QTBUG-29442 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
46490,5 | Fix text issue with Hiragana characters when stylesheet is applied. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |